# echo-lang

./: Makefile  README.md  comprehensive_test.eo  echo  executable  go.mod  go.sum  output.c  output.ll  program  standalone_memory_pool_test  temp_spawn.go  test.ll  test_fat_arrow.go  test_memory_pool  test_tokenizer.go  test_type.go
internal/modules/runtime/standalone_test/: CMakeLists.txt
internal/modules/runtime_backup/: CMakeLists.txt
internal/modules/runtime_backup/examples/: basic_usage.c
internal/modules/runtime_backup/standalone_test/: Makefile
runtime/: CMakeLists.txt  INDUSTRIAL_MEMORY_POOL_README.md  MEMORY_POOL_IMPROVEMENTS.md  basic_usage_test  channel.c  channel.h  context_aarch64.h  machine.h  performance_test  processor.h
runtime/api/: runtime_api.c  runtime_api.h  runtime_map_iter.c  types.h
runtime/api/echo/: coroutine.h  gc.h  runtime.h
runtime/application/commands/: channel_commands.h  coroutine_commands.h  create_coroutine.h  future_commands.h  task_commands.h
runtime/application/dtos/: async_dtos.c  async_dtos.h  channel_dtos.c  channel_dtos.h  coroutine_dtos.c  coroutine_dtos.h  result_dtos.c  result_dtos.h  status_dtos.c  status_dtos.h  task_dtos.h
runtime/application/integration-modes/: sync-caller.h
runtime/application/queries/: debug_queries.h  metrics_queries.h  status_queries.h
runtime/application/services/: async_application_service.c  async_application_service.h  channel_application_service.c  channel_application_service.h  coroutine_application_service.c  coroutine_application_service.h  runtime_application_service.c  runtime_application_service.h  runtime_service.h  task_application_service.c  task_application_service.h
runtime/domain/async/entity/: future.c.backup  future.h
runtime/domain/async/service/: async_runtime.h
runtime/domain/async_computation/aggregate/: future.c  future.h
runtime/domain/async_computation/events/: future_events.c  future_events.h
runtime/domain/async_computation/repository/: future_repository.h  future_repository_memory.c
runtime/domain/channel/: channel.c  channel.h  select.h
runtime/domain/channel/event/: channel_events.h
runtime/domain/channel/service/: channel_manager.h
runtime/domain/channel_communication/adapter/: channel_adapter.c  channel_adapter.h
runtime/domain/channel_communication/aggregate/: channel.c  channel.h
runtime/domain/channel_communication/events/: channel_events.c  channel_events.h
runtime/domain/communication/: channel.c  network.c  network.h  select.c
runtime/domain/concurrency/entity/: atomic.h  mutex.c  mutex.h  semaphore.h
runtime/domain/coroutine/: context.c  context.c.backup_test  context.h  coroutine.c  coroutine.h  coroutine_runtime.c  coroutine_runtime_asm.c  yield.c  yield.h
runtime/domain/future/: future.c  future.h
runtime/domain/future/service/: future_combinator.h
runtime/domain/gc/: gc.h
runtime/domain/gc/service/: gc_controller.h
runtime/domain/runtime/: echo_runtime.h
runtime/domain/scheduler/: machine.c  machine.h  processor.h  scheduler.c  scheduler.h
runtime/domain/scheduler/async/: future.c
runtime/domain/scheduler/concurrency/: executor.h  machine.c  machine.h  processor.c  processor.h  scheduler.c  scheduler.h
runtime/domain/scheduler/coroutine/: coroutine.h.backup  coroutine_runtime.c
runtime/domain/scheduler/task/: task.c.backup
runtime/domain/shared/events/: bus.h
runtime/domain/task/: task.c
runtime/domain/task/entity/: task.c  task.h
runtime/domain/task/event/: task_events.c  task_events.h
runtime/domain/task/repository/: task_repository.h
runtime/domain/task/service/: task_scheduler.c  task_scheduler.h
runtime/domain/task_execution/aggregate/: coroutine.h  task.c  task.h
runtime/domain/task_execution/events/: task_events.c  task_events.h
runtime/domain/task_execution/repository/: task_repository.h  task_repository_memory.c
runtime/domain/task_scheduling/adapter/: scheduler_adapter.c  scheduler_adapter.h
runtime/domain/task_scheduling/aggregate/: scheduler.c  scheduler.h
runtime/examples/: basic_usage.c  performance_comparison.c
runtime/include/echo/: coroutine_context.h
runtime/infrastructure/adapters/: external_service_adapter.h  persistence_adapter.h  platform_adapter.h
runtime/infrastructure/config/: environment_config.h  runtime_config.h
runtime/infrastructure/core/: cache_system.c  cache_system.h  industrial_memory_pool.c  industrial_memory_pool.h  task_pool.c  task_pool.h
runtime/infrastructure/event/: bus_impl.c  bus_impl.h  event_bus_initializer.c  event_bus_initializer.h
runtime/runtime/: INDUSTRIAL_MEMORY_POOL_README.md  Makefile
runtime/runtime.backup.20260118_101715/: CMakeLists.txt  context_x86_64.h  coroutine.c  coroutine_runtime.c.backup  coroutine_runtime.c.backup2  future.c  processor.c
runtime/runtime.backup.20260118_101715/tests/: gc_test.c  industrial_memory_pool_test.c
runtime/runtime/tests/: advanced_memory_pool_test.c  async_memory_pool_test.c  standalone_memory_pool_test.c
runtime/shared/events/: event_publisher.h  event_subscriber.h  event_system.h  event_types.h
runtime/shared/exceptions/: exception_handler.h  exception_handling.h  runtime_exception.h
runtime/shared/handles/: file_handle_manager.c  file_handle_manager.h  socket_handle_manager.c  socket_handle_manager.h
runtime/shared/monitoring/: metric.h  metric_collector.h
runtime/shared/result/: result.c  result.h
runtime/shared/types/: common_types.h
runtime/src/core/: industrial_memory_pool.c
runtime/standalone_test/: Makefile
runtime/tests/: async_memory_pool_test.c  gc_test.c  industrial_memory_pool_test.c  run_tests.sh  standalone_memory_pool_test.c
runtime/tests/integration-tests/: test_channel_adapter_integration.c  test_coroutine_integration.c  test_event_bus_integration.c  test_runtime_integration.c
runtime/tests/performance-tests/: test_memory_pool_performance.c  test_task_scheduler_performance.c
runtime/tests/stress-tests/: test_runtime_stress.c
runtime/tests/unit-tests/: test_coroutine.c  test_event_bus.c  test_framework.h  test_task.c
(+557 files in other folders)
